--- a/style.css
+++ b/style.css
@@ -1,7 +1,79 @@
+body {
+    background-color: #ced6e0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.calculator-container{
+    padding: 2px;
+    border: 10px solid #2f3542;
+    border-radius: 8px;
+    background-color: #1e272e;
+    height: 51vh;
+    width: 40vh;
+    position: absolute;
+}
+
 .display {
-    border: 1px solid black;
+    border: 5px solid black;
+    background-color: #a4b0be;
+    height: 9.3vh;
+    font-size: 100px;
+    text-align: right;
+    text-shadow: 1px 1px white;
+}
+
+.delete-container {
+    align-items: center;
+    /*margin: 11px 3px 0 6px;*/
+    display: flex;
+}
+
+.delete-container button {
+    background-color: #00d8d6;
+    height: 90px;
+    width: 100%;
+    margin: 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    border-radius: 8px;
+    font-weight: bold;
+}
+
+.btn-container {
+    display: flex;
+    flex-shrink: 0;
 }
 
 .btn-container .numbers {
-    border: 1px solid black;
+    text-align: center;
+    /*margin-right: 3.5px;*/
+}
+
+.btn-container .operators{
+    text-align: center;
+}
+
+.btn-container .numbers button {
+    background-color: #ffa801;
+    font-weight: bold;
+}
+
+.btn-container .operators button {
+    background-color: #ffd32a;
+    font-weight: bold;
+}
+
+.btn-container button {
+    height: 100px;
+    width: 120px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    border-radius: 8px;
 }
