--- a/style.css
+++ b/style.css
@@ -11,31 +11,29 @@ body {
     border: 10px solid #2f3542;
     border-radius: 8px;
     background-color: #1e272e;
-    height: 51vh;
-    width: 40vh;
-    position: absolute;
+    height: 500px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
 }
 
 .display {
     border: 5px solid black;
     background-color: #a4b0be;
-    height: 9.3vh;
-    font-size: 100px;
+    font-size: 65px;
     text-align: right;
     text-shadow: 1px 1px white;
 }
 
 .delete-container {
     align-items: center;
-    /*margin: 11px 3px 0 6px;*/
     display: flex;
 }
 
 .delete-container button {
     background-color: #00d8d6;
-    height: 90px;
+    height: 70px;
     width: 100%;
-    margin: 2px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -45,35 +43,21 @@ body {
 }
 
 .btn-container {
-    display: flex;
-    flex-shrink: 0;
-}
-
-.btn-container .numbers {
-    text-align: center;
-    /*margin-right: 3.5px;*/
-}
-
-.btn-container .operators{
-    text-align: center;
-}
-
-.btn-container .numbers button {
-    background-color: #ffa801;
-    font-weight: bold;
-}
-
-.btn-container .operators button {
-    background-color: #ffd32a;
-    font-weight: bold;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    flex: 1;
 }
 
 .btn-container button {
-    height: 100px;
-    width: 120px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
     font-size: 32px;
     border-radius: 8px;
+    box-sizing: border-box;
+}
+
+.btn-container .number, 
+.btn-container .operator,
+.btn-container .float {
+    background-color: #ffa801;
+    font-weight: bold;
 }
